--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-pager-view": "^5.4.11",
     "react-native-paper": "^4.11.1",
     "react-native-paper-alerts": "^0.1.1",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
