--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-native-firebase/app": "^14.5.0",
     "@react-native-firebase/auth": "^14.5.0",
     "@react-native-firebase/crashlytics": "^14.5.0",
+    "@react-native-firebase/firestore": "^15.6.0",
     "@react-native-firebase/perf": "^14.5.0",
     "@react-native-google-signin/google-signin": "^7.1.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
